chore(CI): fix k8s label for dependabot